# MT3-library

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE.txt  README.md
assets/: mt3.png~
examples/: CMakeLists.txt
examples/json2bto/: main.cpp
examples/printbto/: main.cpp
include/: buffer.h  debug.h  mt3.h  platform.h  platform.h.in  types.h
include/SP/: all.h  config.h.in  types.h
include/SP/base/: no_copy.h  no_move.h
include/SP/cnc/: shared_mutex.h  thread.h  thread.inl  thread_impl.h
include/SP/cnc/platform/: thread_impl_posix.h  thread_impl_win32.h
include/SP/config/: compiler.h  cplusplus.h  cpp11_backward_compat.h  debug.h
include/SP/sparse/: array.h  buffer.h  mot.h  mt3.h  public.h  tree.h
include/SP/test/: asserts.h  unit.h
include/SP/utils/: any.h  io.h  variant.h
src/: CMakeLists.txt  asserts.h  buffer.c  internal.h  mt3.c  mt3_impl.c  sdbm.c  serialization.c  treeops.c  unit.c  unit.h
src/SP/cnc/: thread.cpp  thread_impl.cpp
src/SP/cnc/platform/: thread_impl_posix.cpp  thread_impl_win32.cpp
src/SP/sparse/: buffer.c  mot.c  mt3.c  tree.cpp
src/SP/test/: unit.c
src/SP/utils/: io.cpp
tests/: CMakeLists.txt  mt3_base_test.cpp  mt3_serialization_test.cpp  mt3_simple_test.cpp  rbt.h  rbt_ops.cpp  sp_bto_test.cpp  sp_mt3_linked_roots_test.cpp  sp_serialization_test.cpp  sp_test_mot_api.cpp  sp_test_mt3_api.cpp  sp_tree_test.cpp
